Add model training and feature importance analysis

--- a/notebooks/02_Preprocessing_Customer_Churn.ipynb
+++ b/notebooks/02_Preprocessing_Customer_Churn.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7ced0484",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ac6ba83c",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0c2dc2c6",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,19 +557,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "5e43c074",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_encoded' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimblearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mover_sampling\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SMOTE\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# 🧩 Separate features and target\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m X = \u001b[43mdf_encoded\u001b[49m.drop(\u001b[33m\"\u001b[39m\u001b[33mChurn_Yes\u001b[39m\u001b[33m\"\u001b[39m, axis=\u001b[32m1\u001b[39m)\n\u001b[32m      8\u001b[39m y = df_encoded[\u001b[33m\"\u001b[39m\u001b[33mChurn_Yes\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# 🔁 Apply SMOTE to balance the classes\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'df_encoded' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class distribution after SMOTE:\n",
+      "Churn_Yes\n",
+      "True     54\n",
+      "False    54\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "63e3ce96",
    "metadata": {},
    "outputs": [
