Fix all model warnings, scale features, and export clean feature importance

--- a/notebooks/03_Modeling_Customer_Churn.ipynb
+++ b/notebooks/03_Modeling_Customer_Churn.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "715325b2",
    "metadata": {},
    "outputs": [
@@ -53,6 +53,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "15d343f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ⚖️ Scale features to improve model convergence\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "feature_names = X.columns\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9c5138d9",
    "metadata": {},
@@ -71,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "0dbdbc8d",
    "metadata": {},
    "outputs": [
@@ -96,20 +112,6 @@
       "   macro avg       0.40      0.41      0.40        22\n",
       "weighted avg       0.40      0.41      0.40        22\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/codespace/.local/lib/python3.12/site-packages/sklearn/linear_model/_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "b4298103",
    "metadata": {},
    "outputs": [
@@ -176,16 +178,6 @@
       "weighted avg       0.64      0.64      0.63        22\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/codespace/.python/current/lib/python3.12/site-packages/xgboost/training.py:183: UserWarning: [18:02:03] WARNING: /workspace/src/learner.cc:738: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
-     ]
     }
    ],
    "source": [
@@ -193,7 +185,7 @@
     "from xgboost import XGBClassifier\n",
     "\n",
     "# Initialize and train the model\n",
-    "xgb_model = XGBClassifier(use_label_encoder=False, eval_metric='logloss', random_state=42)\n",
+    "xgb_model = XGBClassifier(eval_metric='logloss', random_state=42)\n",
     "xgb_model.fit(X_train, y_train)\n",
     "\n",
     "# Predict on test set\n",
@@ -226,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "d0119864",
    "metadata": {},
    "outputs": [
@@ -324,7 +316,7 @@
        "23                   StreamingMovies_Yes    0.039845"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,9 +325,10 @@
     "# 📤 Export Feature Importances from XGBoost\n",
     "import pandas as pd\n",
     "\n",
+    "\n",
     "# Create DataFrame with feature names and their importances\n",
     "importance_df = pd.DataFrame({\n",
-    "    'Feature': X_train.columns,\n",
+    "    'Feature': feature_names,\n",
     "    'Importance': xgb_model.feature_importances_\n",
     "}).sort_values(by='Importance', ascending=False)\n",
     "\n",
